@@ -1391,60 +1391,3 @@ def msam(data, members):
                 angles[i,j,k]= 1.0 - np.arccos(a) / (math.pi / 2)
     return angles
 
-#---------------------
-# Deprecated functions
-#---------------------
-
-
-def principalComponents(image):
-    warn('principalComponents has been deprecated.  Use principal_components.',
-         DeprecationWarning)
-    return principal_components(image)
-
-
-def linearDiscriminant(classes):
-    warn('linearDiscriminant has been deprecated.  Use linear_discriminant.',
-         DeprecationWarning)
-    return linear_discriminant(classes)
-
-
-def reduceEigenvectors(L, V, fraction=0.99):
-    warn('reduceEigenvectors has been deprecated.  Use reduce_eigenvectors.',
-         DeprecationWarning)
-    return reduce_eigenvectors(L, V, fraction)
-
-
-def logDeterminant(x):
-    warn('logDeterminant has been deprecated.  Use log_det.',
-         DeprecationWarning)
-    return log_det(x)
-
-
-def createTrainingClasses(image, class_mask, calc_stats=0, indices=None):
-    warn('createTrainingClasses has been deprecated. '
-         + 'Use create_training_classes.', DeprecationWarning)
-    return create_training_classes(image, class_mask, calc_stat, indices)
-
-
-def bhattacharyyaDistance(class1, class2):
-    warn('bhattacharyyaDistance has been deprecated.  Use bdist.',
-         DeprecationWarning)
-    return bdist(class1, class2)
-
-
-def bDistanceTerms(a, b):
-    warn('bDistanceTerms has been deprecated.  Use bdist_terms.',
-         DeprecationWarning)
-    return bdist_terms(image)
-
-
-def transformImage(matrix, image):
-    warn('transform_image has been deprecated.  Use transform_image.',
-         DeprecationWarning)
-    return transform_image(matrix, image)
-
-
-def spectralAngles(data, members):
-    warn('spectralAngles has been deprecated.  Use spectral_angles.',
-         DeprecationWarning)
-    return spectral_angles(data, members)
